@@ -3,7 +3,9 @@ DOMjudge Programming Contest Judging System
 Version 1.2.1 - SVN
 -------------------
  - Changed config option SUBM_VERIFY to VERIFICATION_REQUIRED and
-   disabled "off" choice. 
+   disabled "off" choice.
+ - Added toggle buttons in jury interface for allowing submission
+   and judging per problem and language.
 
 Version 1.2.0 - 26 June 2006
 ----------------------------
